--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ a:hover {
         height:70vh;
         justify-content: center;
         align-items: center;
+        margin-bottom: 10%;
     }
     .intro-content{
         width:100%;
