--- a/style.css
+++ b/style.css
@@ -35,50 +35,34 @@ a {
 
 /* navigation bar  */
 
-nav {
-    position: relative;
-    background-color: rgba(1, 1, 1, 0.1);
-    height: 88.5px;
-    width: 100vw;
+.navigation{
     display: flex;
-    flex-wrap: wrap;
+    position: fixed;
+    z-index: 1;
     align-items: center;
-    padding-right: 1%;
-    transition: all 700ms ease-in;
+    top:0;
+    width:100%;
+    background-color: #000000;
 }
 
-.navbar-expand {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    height: 50vh;
-    width: 100%;
-    z-index: 100;
-    background: #5c5050;
-}
-.list{
-    display: flex;
+.nav-inner-div{
+    display:flex;
     width:50%;
-    justify-content: end;
+    margin-left: auto;
 }
-.contents {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: var(--color-4);
-    margin-right: 6%;
+
+.nav-list{
+    list-style: none;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
     font-family: 'Source Code Pro', monospace;
 }
 
-
-a:hover {
-    transition: all 700ms ease;
-    color: var(--color-2);
-}
-
-.hamburger {
+.hamburger{
     display: none;
-    cursor: pointer;
+    margin-right: 2%;
 }
 
 /*************************************************/
@@ -87,16 +71,16 @@ a:hover {
 .intro {
     position: relative;
     display: flex;
-    height: 80vh;
+    height: 100vh;
     width: 100vw;
-    padding-top: 6%;
+    align-items: center;
     overflow: hidden;
 }
 
 .intro-content {
     position: absolute;
     width: 40%;
-    height: 100%;
+    height: auto;
     margin-left: 12%;
     color: var(--color-4);
     font-family: 'Source Code Pro', monospace;
@@ -114,6 +98,7 @@ a:hover {
     width: 2px;
     background-color: white;
     margin-left: 8px;
+    margin-top: auto;
     animation: blink .4s linear infinite alternate;
 }
 
@@ -148,7 +133,7 @@ a:hover {
 .more-about {
     width: 60%;
     height: auto;
-    border-bottom: 1px solid var(--color-1);
+    border-bottom: 2px solid var(--color-1);
 }
 
 .about-me-info {
@@ -161,7 +146,14 @@ a:hover {
 
 
 /* academics section here */
-
+.academic-heading{
+    font-size: 2.5rem; 
+    font-family: 'Signika', sans-serif;
+    color:white ;
+     display:flex;
+     align-items: center;
+     justify-content: center;
+}
 .academics {
     display: flex;
     height: auto;
@@ -227,8 +219,8 @@ a:hover {
     height: 70%;
     width: 50%;
     display: none;
-    /* justify-content: center;
-    align-items: center; */
+    
+    font-family: 'Signika', sans-serif;
     padding: 2%;
     color: rgb(185, 183, 183);
 }
@@ -371,28 +363,57 @@ a:hover {
 }
 
 /* media queries */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 979px) {
 
 
 
-    .list{
-        display: none;
-        flex-direction: column;
-        flex-basis: 100%;
-        justify-content: center;
+    /* navbar responsive */
+    
+    .navigation{
+     position:relative;
+     width:100%;
+     padding:2%;
+    }
+
+    .nav-inner-div{
+        position:absolute;
+        top:0;
+        left:0;
         align-items: center;
+        transform: translateX(100%);
+        background-color: rgb(133, 131, 131);
+        height:100vh;
+        width:100%;
+        transition: all 0.5s linear;
     }
-    .hamburger {
-        flex-basis: 10%;
-        display: flex;
-        margin-left: auto;
-    }
+
+   .hamburger{
+    display: block;
+    z-index: 999;
+    margin-left: auto;
+    cursor:pointer;
+
+   }
+
+   .shownavbar{
+    transform: translateX(0);
+    transition: all 0.5s linear;
+    
+   }
+
+   .nav-list{
+    flex-direction: column;
+    height:45%;
+   }
+   
+
+
 
     .intro {
-        height: 70vh;
+        height: 100vh;
         justify-content: center;
         align-items: center;
-        margin-bottom: 10%;
+
     }
 
     .intro-content {
@@ -404,8 +425,21 @@ a:hover {
         text-align: center;
     }
 
+    .cursor {
+        display: inline-block;
+        height: 50px;
+        width: 2px;
+        background-color: white;
+        margin-left: 8px;
+        margin-top: auto;
+        animation: blink .4s linear infinite alternate;
+    }
+
     .about {
-        padding-left: 8%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
     }
 
     .about-me {
@@ -442,6 +476,15 @@ a:hover {
         color: rgb(185, 183, 183)
     }
 
+
+    .academic-heading{
+        font-size: 1.5rem; 
+        font-family: 'Signika', sans-serif;
+        color:white ;
+         display:flex;
+         align-items: center;
+         justify-content: center;
+    }
 
     .academics {
         display: flex;
